--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "~5.5|~6.0|~7.0|~8.0"
+        "laravel/framework": "~5.5|~6.0|~7.0|~8.0",
+        "tucker-eric/eloquentfilter": "^3.0"
     },
     "autoload": {
         "psr-4": {
