--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=7.1.0",
         "laravel/framework": ">5.5",
         "tucker-eric/eloquentfilter": "^3.0",
-        "bensampo/laravel-enum": "^3.4"
+        "bensampo/laravel-enum": "^3.4",
+        "jiannei/laravel-response": "^1.7"
     },
     "autoload": {
         "psr-4": {
